--- a/index.html
+++ b/index.html
@@ -42,105 +42,92 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-lg-3 pl-5 mt-3 pr-5">
+                <div class="col-sm-12 col-lg-2 pl-5 mt-3">
                     <img src="img/jo-burnell.svg" alt="jo-burnell" class="rounded-circle mb-4">
-                    <div class="pr-5">
-                    <p>Jo Burnell is a freelance writer, editor, book reviewer and paediatric speech pathologist. <br></p></div>
-                        <a href="#" class="pl-2">Learn more about Jo</a>
-                    <div class="text-sm-2 mt-5 pt-5 pr-5">
-                        <p><i>"Jo gives such constructive and considered feedback in her assessments, helping authors realise the potential of their manuscripts through her strong grasp of both the big picture and the finer details. I am so grateful for her thoughtful and professional assessment service, which helped me rework my manuscript into a state that was ready for submission. It has since been accepted for publication!" </i><br><br>
-                            <span class="font-weight-bold">–Penny Harrison, </span> <br>
-                            pennyharrison.com.au
+                    <p>Jo Burnell is a freelance writer, editor, book reviewer and paediatric speech pathologist. <br></p>
+                    <a href="#">> Learn more about Jo</a>
+                    <div class="text-sm-2 mt-5 pt-5">
+                        <p><i>“Jo’s assessments of Unpublished Picture Book Manuscripts were thoughtful, insightful and detailed, encouraging each creator to think outside the square and push themselves higher.”</i><br><br>
+                            <span class="font-weight-bold">–Tania McCartney,</span> <br>
+                            taniamccartney.com
                         </p>
                     </div>
-                    <div class="c-bottom pb-4">
-                        <div class="row">
-                            <div class="col-12 col-sm-9 pt-2">
-                                © Jo Burnell 2018
-                            </div>
-                            <div class="col-12 col-sm-3">
-                                <img src="img/jin-and-co.svg" alt="jin-and-co">
-                            </div>
-                        </div>
+                </div>
 
+                <div class="col-sm-12 col-lg-2 offset-lg-1 mt-5 pt-5">
+                    <div class="text-sm-1 pb-4">
+                        <p>Editing Services</p>
+                    </div>
+                    <img src="img/img-1.png" alt="img-1" class="img-fluid">
+                    <div class="text-title mt-5 pb-5">
+                        <p>Jo Burnell Writing and Editing Services</p>
+                    </div>
+                    <div class="c-bottom">
+                        <a href="#">> See all services</a>
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-5 mt-5 pl-5">
-                    <div class="text-title">Editing for websites</div>
-                    <div class="text-sm-1">Writing and Editing Services</div>
-                    <div class="text-title-2 pt-5">
-                        <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. </p>
+                <div class="col-sm-12 col-lg-2 mt-5 pt-5">
+                    <div class="text-sm-1 pb-4">
+                        <p>Editing Services</p>
                     </div>
-                    <p>Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. <br><br> 
-
-                        <span class="font-weight-bold">Had she nay dissimilar admiration interested</span><br><br>
-
-                        Departure performed exquisite rapturous so ye me resources. Rendered her for put improved concerns his. Ladies bed wisdom theirs mrs men months set. <br>
-
-                    <ul>
-                        <li>Dispatched as it increasing pianoforte</li>
-                        <li>Hearing now saw perhaps</li>
-                        <li>Minutes herself his</li>
-                        <li>Instantly excellent therefore</li>
-                        <li>Joy green but least marry rapid quiet but</li>
-                        <li>Way devonshire introduced</li>
-                        <li>Expression saw travelling affronting. </li>
-                    </ul>  <br>
-
-                    <span class="font-weight-bold">He do subjects prepared bachelor</span> <br><br>
-                    juvenile ye oh. He feelings removing informed he as ignorant we prepared. Evening do forming observe spirits is in. Country hearted be of justice sending. On so they as with room cold ye. Be call four my went mean. Celebrated if remarkably especially an. Going eat set she books found met aware. <br><br>
-
-                    Remove but suffer wanted his lively length. Moonlight two applauded conveying end direction old principle but. Are expenses distance weddings perceive strongly who age domestic.<br></p>
-
-                    <p><span class="font-weight-bold">Ready to Get Started?</span><br>
-                    To learn more about editing services, <span class="font-weight-bold"><a href="#">contact Jo today</a> </span>
-                    </p>
-            </div>
-
-            <div class="col-sm-12 col-lg-3 pr-5 offset-lg-1 mt-5 pb-4">
-                <div class="pt-5 mt-4">
-                    <img src="img/services-img.png" alt="services" class="c-padding">
-                    <div class="text-title c-margin pl-3 pr-4">
-                        <p>Jo Burnell Writing
-                            and Editing Services</p>
+                    <img src="img/img-2.png" alt="img-2" class="img-fluid mb-1">
+                    <div class="text-title mt-5 pt-4 pb-5">
+                        <p>Jo Burnell Writing and Editing Services</p>
                     </div>
-                    <div class="pl-3 pr-4">
-                        <p>Inquietude simplicity terminated she compliment remarkably few her nay. The weeks are ham asked jokes.</p>
-                        <p><a href="#"><span class="font-weight-bold">> See all services</span></a></p>
+                    <div class="c-bottom">
+                        <a href="#">> See all services</a>
                     </div>
                 </div>
-                
-                <div class="mt-5">
-                    <img src="img/contact-img.png" alt="services" class="c-padding">
-                    <div class="text-title c-margin pl-3 pr-4">
+
+                <div class="col-sm-12 col-lg-2 mt-5 pt-5">
+                    <div class="text-sm-1 pb-4">
+                        <p>Contact Jo</p>
+                    </div>
+                    <img src="img/img-3.png" alt="img-3" class="img-fluid mb-3">
+                    <div class="text-title  mt-5 pt-4 pb-5">
                         <p>Submit your manuscript or contact Jo</p>
                     </div>
-                    <div class="pl-3 pr-4">
-                        <p>Excited him now natural saw passage offices you minuter. At by asked being court hopes. Farther so friends am to detract. Forbade concern do private be. </p>
-                        <p><a href="#"><span class="font-weight-bold">> Contact Jo</span></a></p>
+                    <div class="c-bottom">
+                        <a href="#">> See all services</a>
                     </div>
                 </div>
-                
-                <div class="mt-5">
-                    <img src="img/subscribe-img.png" alt="services" class="c-padding">
-                    <div class="text-title c-margin pl-3 pr-4">
-                        <p>Subscribe to Jo’s newsletter for writing tips</p>
+
+
+                <div class="col-sm-12 col-lg-2 mt-5 pt-5">
+                    <div class="text-sm-1 pb-4">
+                        <p>Latest Blog post</p>
                     </div>
-                    <div class="pl-3 pr-4">
-                        <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions</p>
-                        <p><a href="#"><span class="font-weight-bold">> Subscribe</span></a></p>
+                    <img src="img/img-4.png" alt="img-4" class="img-fluid mb-1">
+                    <div class="text-title  mt-5 pt-4 pb-5">
+                        <p>What is a Structural assessment report?</p>
+                    </div>
+                    <div class="c-bottom">
+                        <a href="#">> See all services</a>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
 
+        <footer class="container-fluid pt-5 pb-3">
+            <div class="row">
+                <div class="col-sm-12 col-lg-2 pl-5 mt-3">
+                    <div class="row">
+                        <div class="col-12 col-sm-9 pt-2 text-sm-3">
+                            © Jo Burnell 2018
+                        </div>
+                        <div class="col-12 col-sm-3">
+                            <img src="img/jin-and-co.svg" alt="jin-and-co">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
     </body>
 </html>
