--- a/page.html
+++ b/page.html
@@ -45,7 +45,7 @@
                 <div class="col-sm-12 col-lg-2 pl-5 mt-3">
                     <img src="img/jo-burnell.svg" alt="jo-burnell" class="rounded-circle mb-4">
                     <p>Jo Burnell is a freelance writer, editor, book reviewer and paediatric speech pathologist. <br></p>
-                        <a href="#" class="ml-2">Learn more about Jo</a>
+                        <a href="#">> Learn more about Jo</a>
                     <div class="text-sm-2 mt-5 pt-5">
                         <p><i>"Jo gives such constructive and considered feedback in her assessments, helping authors realise the potential of their manuscripts through her strong grasp of both the big picture and the finer details. I am so grateful for her thoughtful and professional assessment service, which helped me rework my manuscript into a state that was ready for submission. It has since been accepted for publication!" </i><br><br>
                             <span class="font-weight-bold">–Penny Harrison, </span> <br>
