--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-lg-2 pl-5 mt-3">
-                    <img src="img/jo-burnell.svg" alt="jo-burnell" class="rounded-circle mb-4">
+                <div class="col-sm-12 col-md-3 col-lg-2 c-padding-col-1 mt-3">
+                    <img src="img/jo-burnell-home.svg" alt="jo-burnell" class="rounded-circle mb-4">
                     <p>Jo Burnell is a freelance writer, editor, book reviewer and paediatric speech pathologist. <br></p>
                     <a href="#">> Learn more about Jo</a>
-                    <div class="text-sm-2 mt-5 pt-5">
+                    <div class="text-sm-2 c-padding-3">
                         <p><i>“Jo’s assessments of Unpublished Picture Book Manuscripts were thoughtful, insightful and detailed, encouraging each creator to think outside the square and push themselves higher.”</i><br><br>
                             <span class="font-weight-bold">–Tania McCartney,</span> <br>
                             taniamccartney.com
@@ -54,15 +54,87 @@
                     </div>
                 </div>
 
+                <!--<div class="col-sm-12 col-lg-2 offset-lg-1 mt-5 pt-5 d-flex">
+<div class="card" style="width: 18rem;">
+<div class="text-sm-1">
+<p>Editing Services</p>
+</div>
+<div class="card-body">
+<img src="img/img-1.png" alt="img-1" class="img-fluid">
+<div class="text-title pb-5 mt-4">
+<p>Jo Burnell Writing and Editing Services</p>
+</div>
+<div class="align-items-end">
+<a href="#">> See all services</a>
+</div>
+
+</div>
+</div>
+</div>
+<div class="col-sm-12 col-lg-2 mt-5 pt-5 d-flex">
+<div class="card" style="width: 18rem;">
+<div class="text-sm-1">
+<p>Editing Services</p>
+</div>
+<div class="card-body">
+<img src="img/img-2.png" alt="img-2" class="img-fluid pb-2 mb-1">
+<div class="text-title pb-5 mt-5">
+<p>Jo Burnell Writing and Editing Services</p>
+</div>
+<div class="align-items-end">
+<a href="#">> See all services</a>
+</div>
+
+</div>
+</div>
+</div>
+<div class="col-sm-12 col-lg-2 mt-5 pt-5 d-flex">
+<div class="card" style="width: 18rem;">
+<div class="text-sm-1">
+<p>Editing Services</p>
+</div>
+<div class="card-body">
+<img src="img/img-3.png" alt="img-3" class="img-fluid mb-3">
+<div class="text-title pb-5 mt-5 pt-4 mb-4">
+<p>Submit your manuscript or contact Jo</p>
+</div>
+<div class="align-items-end">
+<a href="#">> See all services</a>
+</div>
+
+</div>
+</div>
+</div>
+<div class="col-sm-12 col-lg-2 mt-5 pt-5 d-flex">
+<div class="card" style="width: 18rem;">
+<div class="text-sm-1">
+<p>Editing Services</p>
+</div>
+<div class="card-body">
+<img src="img/img-4.png" alt="img-4" class="img-fluid">
+<div class="text-title pb-5 mt-4">
+<p>What is a Structural assessment report?</p>
+</div>
+<div class="align-items-end">
+<a href="#">> See all services</a>
+</div>
+
+</div>
+</div>
+</div>-->
+
                 <div class="col-sm-12 col-lg-2 offset-lg-1 mt-5 pt-5">
                     <div class="text-sm-1 pb-4">
                         <p>Editing Services</p>
                     </div>
-                    <img src="img/img-1.png" alt="img-1" class="img-fluid">
-                    <div class="text-title mt-5 pb-5">
+                    <div class="c-div-height">
+                        <img src="img/img-1.png" alt="img-1" class="img-fluid">
+                    </div>
+
+                    <div class="text-title">
                         <p>Jo Burnell Writing and Editing Services</p>
                     </div>
-                    <div class="c-bottom">
+                    <div class="c-bottom c-padding-col">
                         <a href="#">> See all services</a>
                     </div>
                 </div>
@@ -71,11 +143,13 @@
                     <div class="text-sm-1 pb-4">
                         <p>Editing Services</p>
                     </div>
-                    <img src="img/img-2.png" alt="img-2" class="img-fluid mb-1">
-                    <div class="text-title mt-5 pt-4 pb-5">
+                    <div class="c-div-height">
+                        <img src="img/img-2.png" alt="img-2" class="img-fluid">
+                    </div>
+                    <div class="text-title">
                         <p>Jo Burnell Writing and Editing Services</p>
                     </div>
-                    <div class="c-bottom">
+                    <div class="c-bottom c-padding-col">
                         <a href="#">> See all services</a>
                     </div>
                 </div>
@@ -84,11 +158,13 @@
                     <div class="text-sm-1 pb-4">
                         <p>Contact Jo</p>
                     </div>
-                    <img src="img/img-3.png" alt="img-3" class="img-fluid mb-3">
-                    <div class="text-title  mt-5 pt-4 pb-5">
+                    <div class="c-div-height">
+                        <img src="img/img-3.png" alt="img-3" class="img-fluid mb-2">
+                    </div>
+                    <div class="text-title">
                         <p>Submit your manuscript or contact Jo</p>
                     </div>
-                    <div class="c-bottom">
+                    <div class="c-bottom c-padding-col">
                         <a href="#">> See all services</a>
                     </div>
                 </div>
@@ -98,25 +174,27 @@
                     <div class="text-sm-1 pb-4">
                         <p>Latest Blog post</p>
                     </div>
-                    <img src="img/img-4.png" alt="img-4" class="img-fluid mb-1">
-                    <div class="text-title  mt-5 pt-4 pb-5">
+                    <div class="c-div-height">
+                        <img src="img/img-4.png" alt="img-4" class="img-fluid">
+                    </div>
+                    <div class="text-title ">
                         <p>What is a Structural assessment report?</p>
                     </div>
-                    <div class="c-bottom">
+                    <div class="c-bottom c-padding-col">
                         <a href="#">> See all services</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <footer class="container-fluid pt-5 pb-3">
+        <footer class="container-fluid pb-4 footer-margin pt-5 mt-2">
             <div class="row">
-                <div class="col-sm-12 col-lg-2 pl-5 mt-3">
+                <div class="col-sm-12 col-md-3 col-lg-2 c-padding-footer mt-3">
                     <div class="row">
-                        <div class="col-12 col-sm-9 pt-2 text-sm-3">
+                        <div class="col-11 col-sm-11 col-md-8 col-lg-9 pt-2 text-sm-3">
                             © Jo Burnell 2018
                         </div>
-                        <div class="col-12 col-sm-3">
+                        <div class="col-1 col-sm-1 col-md-4 col-lg-3">
                             <img src="img/jin-and-co.svg" alt="jin-and-co">
                         </div>
                     </div>
