--- a/page.html
+++ b/page.html
@@ -42,30 +42,19 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-lg-2 pl-5 mt-3">
+                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-2 c-padding-col-1 mt-3">
                     <img src="img/jo-burnell.svg" alt="jo-burnell" class="rounded-circle mb-4">
                     <p>Jo Burnell is a freelance writer, editor, book reviewer and paediatric speech pathologist. <br></p>
-                        <a href="#">> Learn more about Jo</a>
+                    <a href="#">> Learn more about Jo</a>
                     <div class="text-sm-2 mt-5 pt-5">
                         <p><i>"Jo gives such constructive and considered feedback in her assessments, helping authors realise the potential of their manuscripts through her strong grasp of both the big picture and the finer details. I am so grateful for her thoughtful and professional assessment service, which helped me rework my manuscript into a state that was ready for submission. It has since been accepted for publication!" </i><br><br>
                             <span class="font-weight-bold">–Penny Harrison, </span> <br>
                             pennyharrison.com.au
                         </p>
                     </div>
-                    <div class="c-bottom pb-4">
-                        <div class="row">
-                            <div class="col-12 col-sm-9 pt-2">
-                                © Jo Burnell 2018
-                            </div>
-                            <div class="col-12 col-sm-3">
-                                <img src="img/jin-and-co.svg" alt="jin-and-co">
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-5 offset-lg-1 mt-5">
+               <div class="col-sm-12 col-md-6 col-lg-6 col-xl-5 offset-xl-1 mt-5">
                     <div class="text-title">Editing for websites</div>
                     <div class="text-sm-1">Writing and Editing Services</div>
                     <div class="text-title-2 pt-5">
@@ -92,12 +81,12 @@
 
                     Remove but suffer wanted his lively length. Moonlight two applauded conveying end direction old principle but. Are expenses distance weddings perceive strongly who age domestic.<br></p>
 
-                    <p><span class="font-weight-bold">Ready to Get Started?</span><br>
+                <p><span class="font-weight-bold">Ready to Get Started?</span><br>
                     To learn more about editing services, <span class="font-weight-bold"><a href="#">contact Jo today</a> </span>
-                    </p>
+                </p>
             </div>
 
-            <div class="col-sm-12 col-lg-2 offset-lg-1 mt-5 pb-4">
+           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-2 offset-xl-1 pb-4 c-padding-4">
                 <div class="pt-5 mt-4">
                     <img src="img/services-img.png" alt="services" class="c-padding">
                     <div class="text-title c-margin pl-3">
@@ -109,8 +98,8 @@
                         <p><a href="#"><span class="font-weight-bold">> See all services</span></a></p>
                     </div>
                 </div>
-                
-                <div class="mt-5">
+
+                <div class="mt-4">
                     <img src="img/contact-img.png" alt="services" class="c-padding">
                     <div class="text-title c-margin pl-3">
                         <p>Submit your manuscript or contact Jo</p>
@@ -120,8 +109,8 @@
                         <p><a href="#"><span class="font-weight-bold">> Contact Jo</span></a></p>
                     </div>
                 </div>
-                
-                <div class="mt-5">
+
+                <div class="mt-4">
                     <img src="img/subscribe-img.png" alt="services" class="c-padding">
                     <div class="text-title c-margin pl-3">
                         <p>Subscribe to Jo’s newsletter for writing tips</p>
@@ -133,13 +122,27 @@
                 </div>
             </div>
         </div>
-        </div>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+        <footer class="container-fluid pb-4 footer-margin-1 pt-5">
+            <div class="row">
+                <div class="col-sm-12 col-md-3 col-lg-2 c-padding-footer mt-3">
+                    <div class="row">
+                        <div class="col-11 col-sm-11 col-md-8 col-lg-9 pt-2 text-sm-3">
+                            © Jo Burnell 2018
+                        </div>
+                        <div class="col-1 col-sm-1 col-md-4 col-lg-3">
+                            <img src="img/jin-and-co.svg" alt="jin-and-co">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
     </body>
 </html>
